{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 17,
  "lineage": "e2a0fc3a-6b71-d170-7445-00952c05fb2c",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_access_web_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-26T12:14:17.819-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/victus-394017/global/firewalls/allow-access-website",
            "log_config": [],
            "name": "allow-access-website",
            "network": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2",
            "priority": 1000,
            "project": "victus-394017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/firewalls/allow-access-website",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-26T12:14:17.785-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/victus-394017/global/firewalls/allow-external-ssh-bastion",
            "log_config": [],
            "name": "allow-external-ssh-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2",
            "priority": 1000,
            "project": "victus-394017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/firewalls/allow-external-ssh-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion-host"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-26T12:14:17.779-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/victus-394017/global/firewalls/allow-bastion-ssh-webserver",
            "log_config": [],
            "name": "allow-bastion-ssh-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2",
            "priority": 1000,
            "project": "victus-394017",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/firewalls/allow-bastion-ssh-webserver",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion-host"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/victus-394017/global/networks/vpc-network-group2",
            "mtu": 0,
            "name": "vpc-network-group2",
            "project": "victus-394017",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-bastion-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-26T12:14:23.236-07:00",
            "gateway_address": "192.168.3.1",
            "id": "projects/victus-394017/regions/asia-southeast1/subnetworks/bastion-host-subnet",
            "ip_cidr_range": "192.168.3.0/24",
            "name": "bastion-host-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "victus-394017",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/subnetworks/bastion-host-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private-web-server-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-26T12:14:22.867-07:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/victus-394017/regions/asia-southeast1/subnetworks/web-server-subnet",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "web-server-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "victus-394017",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/subnetworks/web-server-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vm_instance",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "Ex_IPv4_static_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.240.202.44",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-26T12:52:26.960-07:00",
            "id": "projects/victus-394017/regions/asia-southeast1/addresses/ex-ipv4-static-bastion",
            "name": "ex-ipv4-static-bastion",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "victus-394017",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/addresses/ex-ipv4-static-bastion"
          }
        }
      ]
    },
    {
      "module": "module.vm_instance",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip_static_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.240.141.8",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-26T12:52:25.687-07:00",
            "id": "projects/victus-394017/regions/asia-southeast1/addresses/ip-static-lb",
            "name": "ip-static-lb",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "victus-394017",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/addresses/ip-static-lb"
          }
        }
      ]
    },
    {
      "module": "module.vm_instance",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "network-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-07-26T12:52:56.302-07:00",
            "id": "projects/victus-394017/regions/asia-southeast1/forwardingRules/lb-net-rule",
            "ip_address": "35.240.141.8",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-net-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-443",
            "project": "victus-394017",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/forwardingRules/lb-net-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/targetPools/lb-target-pool"
          },
          "dependencies": [
            "module.vm_instance.google_compute_address.ip_static_lb",
            "module.vm_instance.google_compute_disk.ssd-web-server",
            "module.vm_instance.google_compute_http_health_check.load-balancer-health-checks",
            "module.vm_instance.google_compute_instance.web-server",
            "module.vm_instance.google_compute_target_pool.lb-target-pool"
          ]
        }
      ]
    },
    {
      "module": "module.vm_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-9-v20230711",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/victus-394017/zones/asia-southeast1-b/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/victus-394017/zones/asia-southeast1-b/instances/bastion-host",
            "instance_id": "8782126539013408615",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "foo": "bar"
            },
            "metadata_fingerprint": "ZRzAU2BJKMg=",
            "metadata_startup_script": "sudo dnf update -y",
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.202.44",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2",
                "network_ip": "192.168.3.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/subnetworks/bastion-host-subnet",
                "subnetwork_project": "victus-394017"
              }
            ],
            "project": "victus-394017",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/zones/asia-southeast1-b/instances/bastion-host",
            "service_account": [
              {
                "email": "234379645620-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion-host"
            ],
            "tags_fingerprint": "GyIn7u6LJ5Y=",
            "zone": "asia-southeast1-b"
          },
          "dependencies": [
            "module.vm_instance.google_compute_address.Ex_IPv4_static_bastion"
          ]
        }
      ]
    },
    {
      "module": "module.vm_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "data-disk-web-server",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/victus-394017/zones/asia-southeast1-b/disks/data-disk-web-server"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-9-v20230711",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/victus-394017/zones/asia-southeast1-b/disks/web-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/victus-394017/zones/asia-southeast1-b/instances/web-server",
            "instance_id": "4320665011877627795",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "foo": "bar"
            },
            "metadata_fingerprint": "tUgYcsII2Ug=",
            "metadata_startup_script": "#!/bin/bash\n# sudo su\nsudo dnf update -y\n\n # Mount disk\n sudo mkfs.ext4 -m 0 -E lazy_itable_init=0,lazy_journal_init=0,discard /dev/sdb\n sudo mkdir -p /mnt/disks/mount_data\n sudo mount -o discard,defaults /dev/sdb /mnt/disks/mount_data\n sudo chmod a+w /mnt/disks/mount_data\n sudo cp /etc/fstab /etc/fstab.backup\n \n # Add auto mount when startup\n sudo echo  UUID=`sudo blkid -s UUID -o value /dev/sdb`  /mnt/disks/mount_data ext4 discard,defaults,no [...]
            "name": "web-server",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/victus-394017/global/networks/vpc-network-group2",
                "network_ip": "192.168.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/victus-394017/regions/asia-southeast1/subnetworks/web-server-subnet",
                "subnetwork_project": "victus-394017"
              }
            ],
            "project": "victus-394017",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/victus-394017/zones/asia-southeast1-b/instances/web-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "web-server"
            ],
            "tags_fingerprint": "heu0dRdRJXc=",
            "zone": "asia-southeast1-b"
          },
          "dependencies": [
            "module.vm_instance.google_compute_disk.ssd-web-server"
          ]
        }
      ]
    }
  ]
}